--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -45,15 +45,22 @@ button {
     justify-content: center;
     align-items: center;
     width: 189px;
-    min-width: 189px;
     height: 60px;
     border-radius: 31px;
-    background: #ff5b2e;
-    box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
-    color: #fff;
+    background: transparent;
+    /* box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42); */
+    color: #ff5b2e;
     font-size: 1.6rem;
     font-weight: 600;
     line-height: 16px; /* 100% */
+    border: 1px solid #ff5b2e;
+}
+
+.btn:hover {
+    background: #ff5b2e;
+    color: #fff;
+    border: 1px solid #ff5b2e;
+    opacity: 0.9;
 }
 
 .section__sub-title {
@@ -280,6 +287,11 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.hero__btn {
+    background: #ff5b2e;
+    color: #fff;
 }
 
 .hero__btn span {
@@ -625,6 +637,17 @@ button {
     margin-top: 71px;
 }
 
+.services__column {
+    flex: 25.13%;
+}
+
+.services__column:nth-child(2) {
+    flex: 49.74%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .services-item {
     display: flex;
     flex-direction: column;
@@ -632,7 +655,6 @@ button {
     padding: 30px 40px;
     margin-bottom: 24px;
     background: #fff;
-    width: 294px;
     height: 208px;
     border-radius: 10px;
     border: 2px solid rgba(255, 188, 122, 0.26);
@@ -702,21 +724,6 @@ button {
     min-width: 214px;
     height: 54px;
     margin: 45px auto 0;
-    color: #ff5b2e;
-    font-size: 1.6rem;
-    font-weight: 500;
-    line-height: 16px; /* 100% */
-    background: transparent;
-    box-shadow: none;
-    border-radius: 31px;
-    border: 1px solid #ff5b2e;
-    opacity: 0.6;
-}
-
-.services__btn:hover {
-    background: #ff5b2e;
-    color: #fff;
-    opacity: 0.9;
 }
 
 /* Team */
@@ -757,7 +764,22 @@ button {
     width: 100%;
     height: 266px;
     border-radius: 129.5px;
+}
+
+.team__column:first-child .team__bg {
     background: linear-gradient(180deg, #90ccff 0%, #59a8eb 95.96%);
+}
+
+.team__column:nth-child(2) .team__bg {
+    background: linear-gradient(180deg, #ff997e 0%, #f3752e 100%);
+}
+
+.team__column:nth-child(3) .team__bg {
+    background: linear-gradient(180deg, #fabf3e 0%, #ffa14a 100%);
+}
+
+.team__column:last-child .team__bg {
+    background: linear-gradient(180deg, #5bd6e2 0%, #00a7cc 100%);
 }
 
 .team__image {
@@ -835,6 +857,7 @@ button {
 
 .price {
     padding: 86px 0;
+    background: #fff6ed;
 }
 
 .price__heading {
@@ -912,7 +935,7 @@ button {
 }
 
 .price__body {
-    margin: 56px 0 86px;
+    margin: 56px 7.5% 0;
     display: flex;
     gap: 44px;
 }
@@ -920,7 +943,7 @@ button {
 .price-card {
     flex: 1;
     padding: 30px 28px 43px;
-    width: 33.33%;
+    max-width: 33.33%;
     border-radius: 20px;
     background: #fff;
 }
@@ -969,4 +992,322 @@ button {
 
 .price-card__item:last-child {
     margin-bottom: 0;
+}
+
+/* Review */
+
+.review {
+    padding: 100px 0;
+}
+
+.review__list {
+    display: flex;
+    overflow: hidden;
+}
+
+.review__item {
+    min-width: 100%;
+    flex: 1;
+    transition: 0.25s;
+}
+
+.review__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.review__btn {
+    border: 1px solid #ff5b2e;
+    border-radius: 50%;
+}
+
+.review__btn:hover {
+    background: #ff5b2e;
+}
+
+.review__btn:hover path {
+    stroke: white;
+}
+
+.review__thumb {
+    display: flex;
+    align-items: flex-end;
+    position: relative;
+    min-width: 23.42%;
+    height: 380px;
+    border-radius: 0 0 137px 137px;
+    overflow: hidden;
+}
+
+.review__bg {
+    width: 100%;
+    height: 350px;
+    border-radius: 137px;
+    background: #ffda54;
+}
+
+.review__image {
+    position: absolute;
+    width: 100%;
+    z-index: 10;
+    left: 50%;
+    translate: -50% 0;
+    object-fit: cover;
+    bottom: 0;
+}
+
+.review__body {
+    width: 48%;
+}
+
+.review__desc {
+    margin: 24px 0 34px;
+    color: #000;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 28px; /* 155.556% */
+}
+
+.review__author {
+    position: relative;
+    padding-left: 28px;
+    color: #282828;
+    font-family: Sora;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 18px; /* 100% */
+}
+
+.review__author::before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    width: 20px;
+    height: 2px;
+    background: #000;
+    left: 0;
+    bottom: 50%;
+}
+
+.review__dots {
+    display: flex;
+    gap: 8px;
+    justify-content: center;
+    margin-top: 56px;
+}
+
+.review__dot {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    border: 1px solid #ff5b2e;
+}
+
+.review__dot--active {
+    width: 24px;
+    height: 8px;
+    border-radius: 4px;
+    background: #ff5b2e;
+}
+
+/* Blog */
+
+.blog {
+    margin: 30px 0 131px;
+}
+
+.blog__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 54px;
+}
+
+.blog__header-content {
+    width: 30%;
+    margin-right: 73px;
+}
+
+.blog__btn {
+    margin-top: 24px;
+    width: 182px;
+    min-width: 182px;
+    height: 56px;
+}
+
+.blog__list {
+    display: flex;
+    gap: 48px;
+}
+
+.blog-item {
+    flex: 1;
+    width: 33.33%;
+}
+
+.blog-item:first-child .blog-item__thumb {
+    background: #90ccff;
+}
+
+.blog-item:nth-child(2) .blog-item__thumb {
+    background: #ff997e;
+}
+
+.blog-item:last-child .blog-item__thumb {
+    background: #5bd6e2;
+}
+
+.blog-item__thumb {
+    display: flex;
+    flex-direction: column;
+    border-radius: 24px 24px 0 24px;
+    padding-top: 24px;
+    padding-left: 36px;
+}
+
+.blog-item__date {
+    display: inline-block;
+    color: #fff;
+    font-family: Sora;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 17px; /* 121.429% */
+    margin-bottom: 25px;
+}
+
+.blog-item__image {
+    width: 100%;
+    object-fit: cover;
+}
+
+.blog-item__title {
+    margin: 28px 20px 16px 0;
+    color: #000958;
+    font-family: Sora;
+    font-size: 2.2rem;
+    font-weight: 600;
+    line-height: 34px; /* 154.545% */
+    display: -webkit-box;
+    -webkit-line-clamp: var(--line-clamp, 2);
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.blog-item__desc {
+    color: #656689;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 24px; /* 171.429% */
+    display: -webkit-box;
+    -webkit-line-clamp: var(--line-clamp, 3);
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+/* Footer */
+
+.footer {
+    position: relative;
+    display: flex;
+}
+
+.footer__left {
+    width: 41%;
+    background: #fff6ed;
+    padding: 114px 0 148px;
+    padding-left: 10%;
+}
+
+.footer__input {
+    position: relative;
+    width: 268px;
+    margin-bottom: 68px;
+}
+
+.footer__email {
+    width: 100%;
+    margin-top: 35px;
+    height: 46px;
+    border-radius: 23px;
+    border: 1px solid rgba(255, 91, 46, 0.25);
+    opacity: 0.6;
+    background: #fff;
+}
+
+.footer__email::placeholder {
+    padding-left: 22px;
+    color: #656689;
+    font-size: 1.2rem;
+    font-weight: 300;
+    line-height: 14px; /* 116.667% */
+}
+
+.footer__btn {
+    position: absolute;
+    right: 1px;
+    bottom: 0;
+    background: #ff5b2e;
+    border-radius: 50%;
+    width: 46px;
+    height: 46px;
+}
+
+.footer-social__title {
+    color: #000958;
+    font-family: Sora;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 20px; /* 111.111% */
+}
+
+.footer-social__icons {
+    margin-top: 16px;
+    display: flex;
+    gap: 16px;
+}
+
+.footer__body {
+    width: 59%;
+    padding: 52px 10% 48px 6.5%;
+}
+
+.footer__heading {
+    color: #000958;
+    font-family: Sora;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 20px; /* 111.111% */
+}
+
+.footer__title,
+.footer__title a {
+    color: #656689;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 28px; /* 200% */
+}
+
+.footer__row {
+    display: flex;
+    margin-bottom: 58px;
+}
+
+.footer__row:last-child {
+    margin-bottom: 0;
+}
+
+.footer__column:first-child {
+    width: 57%;
+}
+
+.footer__copyright {
+    position: absolute;
+    bottom: 48px;
+    left: 50%;
+    translate: -50% 0;
+    color: #656689;
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 14px; /* 116.667% */
 }
